deploy: 40a7cd055a9077fd83cdddcfca2aab431c402b0e

--- a/digest_2026-01-25.md
+++ b/digest_2026-01-25.md
@@ -1,4 +1,4 @@
-# arXiv 论文日报 2026-01-24
+# arXiv 论文日报 2026-01-25
 > 自动抓取并筛选 | 共 20 篇论文
 ---
 # RNA_structure_prediction
@@ -17,7 +17,7 @@
 **作者**: Wenhang Ge, Guibao Shen, Jiawei Feng, Luozhou Wang, Hao Lu, Xingye Tian, Xin Tao, Ying-Cong Chen
 **更新时间**: 2026-01-22 18:59
 **论文摘要**: Recent advances in camera-controlled video diffusion models have significantly improved video-camera alignment. However, the camera controllability still remains limited. In this work, we build upon Reward Feedback Learning and aim to further improve camera controllability. However, directly borrowing existing ReFL approaches faces several challenges. First, current reward models lack the capacity to assess video-camera alignment. Second, decoding latent into RGB videos for reward computation in
-**核心总结**: 问题：视频-相机对齐控制能力仍有限；方法：基于奖励反馈学习改进相机可控性，但现有奖励模型无法评估对齐；结果：无。
+**核心总结**: 问题：视频-相机对齐的可控性仍受限；方法：基于奖励反馈学习改进相机可控性；结果：现有奖励模型无法评估视频-相机对齐，解码生成RGB视频用于奖励计算存在挑战。
 
 ---
 ## 3. [Gauge Theory and Skein Modules](http://arxiv.org/abs/2601.16213v1)
@@ -25,7 +25,7 @@
 **作者**: Du Pei
 **更新时间**: 2026-01-22 18:59
 **论文摘要**: We study skein modules of 3-manifolds by embedding them into the Hilbert spaces of 4d ${\cal N}=4$ super-Yang-Mills theories. When the 3-manifold has reduced holonomy, we present an algorithm to determine the dimension and the list of generators of the skein module with a general gauge group. The analysis uses a deformation preserving ${\cal N}=1$ supersymmetry to express the dimension as a sum over nilpotent orbits. We find that the dimensions often differ between Langlands-dual pairs beyond th
-**核心总结**: 问题：3-流形的skein模结构；方法：通过嵌入4d $\mathcal{N}=4$超杨-米尔斯理论的希尔伯特空间，利用保持$\mathcal{N}=1$超对称的变形计算维数；结果：给出具有约化全息的3-流形skein模的维数和生成元列表，发现朗兰兹对偶对的维数常不同。
+**核心总结**: 问题：研究3-流形的skein模，分析其在4d $\mathcal{N}=4$ 超对称杨-Mills理论中的嵌入；方法：利用保持$\mathcal{N}=1$超对称的形变，通过幂零轨道求和计算维数；结果：发现Langlands对偶对的维数常有差异。
 
 ---
 ## 4. [Why Can't I Open My Drawer? Mitigating Object-Driven Shortcuts in Zero-Shot Compositional Action Recognition](http://arxiv.org/abs/2601.16211v1)
@@ -33,7 +33,7 @@
 **作者**: Geo Ahn, Inwoong Lee, Taeoh Kim, Minho Shim, Dongyoon Wee, Jinwoo Choi
 **更新时间**: 2026-01-22 18:59
 **论文摘要**: We study Compositional Video Understanding (CVU), where models must recognize verbs and objects and compose them to generalize to unseen combinations. We find that existing Zero-Shot Compositional Action Recognition (ZS-CAR) models fail primarily due to an overlooked failure mode: object-driven verb shortcuts. Through systematic analysis, we show that this behavior arises from two intertwined factors: severe sparsity and skewness of compositional supervision, and the asymmetric learning difficul
-**核心总结**: 问题：现有零样本组合动作识别模型因物体驱动的动词捷径而失效；方法：分析组合监督数据的稀疏性和偏态，以及学习不对称性；结果：揭示导致模型失败的关键因素。
+**核心总结**: 问题：现有零样本组合动作识别模型因物体驱动的动词捷径而失效；方法：分析组合监督数据的稀疏性和偏态，以及学习不对称性；结果：揭示导致模型失败的两个关键因素。
 
 ---
 ## 5. [PyraTok: Language-Aligned Pyramidal Tokenizer for Video Understanding and Generation](http://arxiv.org/abs/2601.16210v1)
@@ -41,7 +41,7 @@
 **作者**: Onkar Susladkar, Tushar Prakash, Adheesh Juvekar, Kiet A. Nguyen, Dong-Hwan Jang, Inderjit S Dhillon, Ismini Lourentzou
 **更新时间**: 2026-01-22 18:58
 **论文摘要**: Discrete video VAEs underpin modern text-to-video generation and video understanding systems, yet existing tokenizers typically learn visual codebooks at a single scale with limited vocabularies and shallow language supervision, leading to poor cross-modal alignment and zero-shot transfer. We introduce PyraTok, a language-aligned pyramidal tokenizer that learns semantically structured discrete latents across multiple spatiotemporal resolutions. PyraTok builds on a pretrained video VAE and a nove
-**核心总结**: 问题：现有视频VAE分词器在多尺度语义结构和跨模态对齐上存在不足；方法：提出PyraTok，基于预训练视频VAE和新方法学习多尺度离散潜在表示；结果：提升跨模态对齐和零样本迁移性能。
+**核心总结**: 问题：现有视频VAE分词器在多尺度和跨模态对齐上表现不佳；方法：提出PyraTok，通过多尺度结构和语言对齐学习离散潜在表示；结果：提升跨模态对齐和零样本迁移能力。
 
 ---
 ## 6. [IVRA: Improving Visual-Token Relations for Robot Action Policy with Training-Free Hint-Based Guidance](http://arxiv.org/abs/2601.16207v1)
@@ -49,7 +49,7 @@
 **作者**: Jongwoo Park, Kanchana Ranasinghe, Jinhyeok Jang, Cristina Mata, Yoo Sung Jang, Michael S Ryoo
 **更新时间**: 2026-01-22 18:57
 **论文摘要**: Many Vision-Language-Action (VLA) models flatten image patches into a 1D token sequence, weakening the 2D spatial cues needed for precise manipulation. We introduce IVRA, a lightweight, training-free method that improves spatial understanding by exploiting affinity hints already available in the model's built-in vision encoder, without requiring any external encoder or retraining. IVRA selectively injects these affinity signals into a language-model layer in which instance-level features reside.
-**核心总结**: 问题：VLA模型因将图像块展平而削弱空间线索；方法：引入IVRA，利用内置视觉编码器的亲和提示，无需额外编码器或训练；结果：提升空间理解，增强精准操作能力。
+**核心总结**: 问题：VLA模型因将图像块展平而削弱空间线索；方法：引入IVRA，利用内置视觉编码器的亲和提示，无需重新训练；结果：提升空间理解，增强精准操作能力。
 
 ---
 ## 7. [Pushing the limits of unconstrained machine-learned interatomic potentials](http://arxiv.org/abs/2601.16195v1)
@@ -57,7 +57,7 @@
 **作者**: Filippo Bigi, Paolo Pegolo, Arslan Mazitov, Michele Ceriotti
 **更新时间**: 2026-01-22 18:46
 **论文摘要**: Machine-learned interatomic potentials (MLIPs) are increasingly used to replace computationally demanding electronic-structure calculations to model matter at the atomic scale. The most commonly used model architectures are constrained to fulfill a number of physical laws exactly, from geometric symmetries to energy conservation. Evidence is mounting that relaxing some of these constraints can be beneficial to the efficiency and (somewhat surprisingly) accuracy of MLIPs, even though care should 
-**核心总结**: 问题：MLIPs在原子尺度建模中替代电子结构计算；方法：部分放松物理约束以提高效率和准确性；结果：放松约束可能提升MLIP性能。
+**核心总结**: 问题：MLIPs在原子尺度建模中替代电子结构计算；方法：部分放松物理约束以提高效率和准确性；结果：实验表明放松约束可提升性能，但需谨慎处理。
 
 ---
 ## 8. [Density-based structural frameworks for prime numbers, prime gaps, and Euler products](http://arxiv.org/abs/2601.16193v1)
@@ -65,7 +65,7 @@
 **作者**: Gregorio Vettori
 **更新时间**: 2026-01-22 18:46
 **论文摘要**: We develop a unified density-based framework for primality, coprimality, and prime pairs, and introduce an intrinsic normalized model for prime gaps constrained by the Prime Number Theorem. Within this setting, a structural tension between Hardy-Littlewood, Cramer, and PNT predictions emerges, leading to quantitative estimates on the rarity of extreme gaps. Additive representations of even integers are reformulated as local density problems, yielding non-conjectural upper and lower bounds compat
-**核心总结**: 问题：研究素数、互素和素数对的统一密度框架；方法：引入基于素数定理的归一化模型，分析Hardy-Littlewood、Cramer与PNT预测的结构矛盾；结果：得出极端素数间隔稀有性的定量估计，以及偶数加法表示的上下界。
+**核心总结**: 问题：素数、互素和素数对的统一密度框架及素数间隔的内在归一化模型；方法：基于素数定理构建模型，分析Hardy-Littlewood、Cramer与PNT预测的结构矛盾；结果：得出极端间隔罕见性的量化估计及偶数加法表示的上下界。
 
 ---
 ## 9. [Evolution of the recent high-accretion state of the recurrent nova T CrB: HST, Swift, NuSTAR, and XMM-Newton observations](http://arxiv.org/abs/2601.16190v1)
@@ -73,7 +73,7 @@
 **作者**: G. J. M. Luna, N. P. M. Kuin, K. Mukai, J. L. Sokoloski, K. Page, J. P. Osborne
 **更新时间**: 2026-01-22 18:42
 **论文摘要**: As the recurrent nova T Coronae Borealis (T CrB) approaches its next predicted thermonuclear eruption, it is currently exhibiting a "super-active state" (SAS) characterized by enhanced multiwavelength emission similar to the behavior recorded prior to the 1946 outburst. We present a multiwavelength analysis of the SAS and the subsequent "faint state" using observations from HST, Swift, NuSTAR, and XMM-Newton. Our results indicate that the SAS was driven by an increase in the mass accretion rate,
-**核心总结**: 问题：T Coronae Borealis处于超活跃状态，可能预示下次爆发；方法：使用HST、Swift、NuSTAR和XMM-Newton进行多波段分析；结果：超活跃状态由质量吸积率增加驱动。
+**核心总结**: 问题：T Coronae Borealis在爆发前表现出超活跃状态；方法：使用HST、Swift、NuSTAR和XMM-Newton进行多波段分析；结果：超活跃状态由质量吸积率增加驱动。
 
 ---
 ## 10. [The Pohozaev identity for the Spectral Fractional Laplacian](http://arxiv.org/abs/2601.16185v1)
@@ -81,7 +81,7 @@
 **作者**: Itahisa Barrios-Cubas, Matteo Bonforte, María del Mar González, Clara Torres-Latorre
 **更新时间**: 2026-01-22 18:36
 **论文摘要**: In this paper, we prove a Pohozaev identity for the Spectral Fractional Laplacian (SFL). This identity allows us to establish non-existence results for the semilinear Dirichlet problem $(-Δ|_Ω)^su = f(u)$ in star-shaped domains. The first such identity for non-local operators was established by Ros-Oton and Serra in 2014 for the Restricted Fractional Laplacian (RFL). However, the SFL differs fundamentally from the RFL, and the integration by parts strategy of Ros-Oton and Serra cannot be applied
-**核心总结**: 问题：谱分数阶拉普拉斯算子的半线性狄利克雷问题在星形区域的非存在性；方法：通过建立Pohozaev恒等式；结果：证明了非存在性结果，不同于受限分数阶拉普拉斯的情况。
+**核心总结**: 问题：证明谱分数阶拉普拉斯算子的Pohozaev恒等式；方法：基于积分变换和变分方法；结果：得出星形区域中半线性Dirichlet问题的非存在性结论。
 
 ---
 # RNA_design
@@ -92,7 +92,7 @@
 **作者**: Shengbang Tong, Boyang Zheng, Ziteng Wang, Bingda Tang, Nanye Ma, Ellis Brown, Jihan Yang, Rob Fergus, Yann LeCun, Saining Xie
 **更新时间**: 2026-01-22 18:58
 **论文摘要**: Representation Autoencoders (RAEs) have shown distinct advantages in diffusion modeling on ImageNet by training in high-dimensional semantic latent spaces. In this work, we investigate whether this framework can scale to large-scale, freeform text-to-image (T2I) generation. We first scale RAE decoders on the frozen representation encoder (SigLIP-2) beyond ImageNet by training on web, synthetic, and text-rendering data, finding that while scale improves general fidelity, targeted data composition
-**核心总结**: 问题：RAEs能否扩展到大规模自由文本到图像生成；方法：在冻结的表示编码器上扩展RAE解码器，使用网络、合成和文本渲染数据训练；结果：规模提升通用保真度，但数据组合需优化。
+**核心总结**: 问题：RAEs能否扩展到大规模自由文本到图像生成；方法：在冻结的表示编码器上扩展RAE解码器，使用网络、合成和文本渲染数据训练；结果：规模提升通用保真度，但数据组成影响效果。
 
 ---
 ## 2. [A general spectral solver for the axisymmetric Jeans equations: fast galaxy modelling with arbitrary anisotropy](http://arxiv.org/abs/2601.16179v1)
@@ -100,7 +100,7 @@
 **作者**: Michele Cappellari
 **更新时间**: 2026-01-22 18:29
 **论文摘要**: Dynamical modelling is a fundamental tool for measuring galaxy masses and density profiles in the era of large integral-field spectroscopic surveys and Bayesian inference. Solutions based on the Jeans equations are popular due to their robustness and computational efficiency. However, traditional semi-analytic Jeans solvers often require restrictive assumptions about the velocity anisotropy to remain computationally tractable. This paper presents a new spectral solver for the axisymmetric Jeans 
-**核心总结**: 问题：传统 Jeans 方程求解器对速度各向异性假设过于严格；方法：提出新的谱型求解器以提高计算灵活性；结果：无。
+**核心总结**: 问题：传统 Jeans 方程求解器需假设速度各向异性；方法：提出新的谱方法求解轴对称 Jeans 方程；结果：无需严格假设，提高计算灵活性与准确性。
 
 ---
 ## 3. [Learning to Discover at Test Time](http://arxiv.org/abs/2601.16175v1)
@@ -108,7 +108,7 @@
 **作者**: Mert Yuksekgonul, Daniel Koceja, Xinhao Li, Federico Bianchi, Jed McCaleb, Xiaolong Wang, Jan Kautz, Yejin Choi, James Zou, Carlos Guestrin, Yu Sun
 **更新时间**: 2026-01-22 18:24
 **论文摘要**: How can we use AI to discover a new state of the art for a scientific problem? Prior work in test-time scaling, such as AlphaEvolve, performs search by prompting a frozen LLM. We perform reinforcement learning at test time, so the LLM can continue to train, but now with experience specific to the test problem. This form of continual learning is quite special, because its goal is to produce one great solution rather than many good ones on average, and to solve this very problem rather than genera
-**核心总结**: 问题：如何利用AI在测试阶段持续学习以解决特定科学问题；方法：采用强化学习在测试时继续训练大语言模型；结果：实现针对特定问题的最优解，而非平均性能。
+**核心总结**: 问题：如何利用AI在测试阶段持续学习以解决特定科学问题；方法：在测试时进行强化学习，让LLM针对具体问题持续训练；结果：实现针对单个问题的最优解，而非平均性能。
 
 ---
 ## 4. [Non-Linearly Separable Distributed Computing: A Sparse Tensor Factorization Approach](http://arxiv.org/abs/2601.16171v1)
@@ -116,7 +116,7 @@
 **作者**: Ali Khalesi, Ahmad Tanha, Derya Malak, Petros Elia
 **更新时间**: 2026-01-22 18:16
 **论文摘要**: The work considers the $N$-server distributed computing setting with $K$ users requesting functions that are arbitrary multi-variable polynomial evaluations of $L$ real (potentially non-linear) basis subfunctions. Our aim is to seek efficient task-allocation and data-communication techniques that reduce computation and communication costs. Towards this, we take a tensor-theoretic approach, in which we represent the requested non-linearly decomposable functions using a properly designed tensor $\
-**核心总结**: 问题：多用户在N服务器环境中请求非线性多项式函数计算；方法：采用张量理论设计任务分配与数据通信方案；结果：无。
+**核心总结**: 问题：多服务器分布式计算中，用户请求任意多变量多项式函数的高效任务分配与通信优化；方法：采用张量理论表示非线性可分解函数；结果：无。
 
 ---
 ## 5. [The FarView Low Frequency Radio Array on the Moon's Far Side: Science and Array Architecture](http://arxiv.org/abs/2601.16170v1)
@@ -124,7 +124,7 @@
 **作者**: Jack O. Burns, Judd Bowman, Tzu-Ching Chang, Gregg Hallinan, Alex Hegedus, Nivedita Mahesh, Bang Nhan, Jonathan Pober, Ronald Polidan, Willow Smith, Nithyanandan Thyagarajan
 **更新时间**: 2026-01-22 18:15
 **论文摘要**: FarView is a proposed low frequency radio interferometer for deployment on the lunar far side, enabled by the Moon's radio quiet environment. Operating over 1-50 MHz inaccessible from Earth, FarView will open a new observational window and promote discovery class science in cosmology, heliophysics, Galactic and exoplanet astrophysics. The primary science is measurement of the redshifted 21 cm signal from the Cosmic Dark Ages (z=30-100), identified by the Astro2020 Decadal Survey as a priority co
-**核心总结**: 问题：探测宇宙黑暗时代21厘米红移信号；方法：部署月球背面低频射电干涉仪FarView；结果：无。
+**核心总结**: 问题：探测宇宙黑暗时代21厘米红移信号；方法：在月球背面部署低频射电干涉仪FarView；结果：可开展宇宙学、太阳物理等多领域发现级科学。
 
 ---
 ## 6. [Scaling Sample-Based Quantum Diagonalization on GPU-Accelerated Systems using OpenMP Offload](http://arxiv.org/abs/2601.16169v1)
@@ -132,7 +132,7 @@
 **作者**: Robert Walkup, Juha Jäykkä, Igor Pasichnyk, Zachary Streeter, Kasia Świrydowicz, Mikko Tukiainen, Yasuko Eckert, Luke Bertels, Daniel Claudino, Peter Groszkowski, Travis S. Humble, Constantinos Evange
 **更新时间**: 2026-01-22 18:13
 **论文摘要**: Hybrid quantum-HPC algorithms advance research by delegating complex tasks to quantum processors and using HPC systems to orchestrate workflows and complementary computations. Sample-based quantum diagonalization (SQD) is a hybrid quantum-HPC method in which information from a molecular Hamiltonian is encoded into a quantum circuit for evaluation on a quantum computer. A set of measurements on the quantum computer yields electronic configurations that are filtered on the classical computer, whic
-**核心总结**: 问题：如何提升量子-高性能计算混合算法的效率；方法：采用基于样本的量子对角化方法，将分子哈密顿量编码到量子电路中进行计算；结果：通过量子计算机获取电子构型并由经典计算机过滤，实现高效计算。
+**核心总结**: 问题：分子哈密顿量的量子对角化任务；方法：将分子哈密顿量编码为量子电路，通过量子计算机评估并用经典计算机过滤结果；结果：无。
 
 ---
 ## 7. [Domain-Incremental Continual Learning for Robust and Efficient Keyword Spotting in Resource Constrained Systems](http://arxiv.org/abs/2601.16158v1)
@@ -140,7 +140,7 @@
 **作者**: Prakash Dhungana, Sayed Ahmad Salehi
 **更新时间**: 2026-01-22 17:59
 **论文摘要**: Keyword Spotting (KWS) systems with small footprint models deployed on edge devices face significant accuracy and robustness challenges due to domain shifts caused by varying noise and recording conditions. To address this, we propose a comprehensive framework for continual learning designed to adapt to new domains while maintaining computational efficiency. The proposed pipeline integrates a dual-input Convolutional Neural Network, utilizing both Mel Frequency Cepstral Coefficients (MFCC) and M
-**核心总结**: 问题：小模型在边缘设备上面临因领域变化导致的准确性和鲁棒性挑战；方法：提出一种持续学习框架，结合双输入卷积神经网络（MFCC和梅尔频谱）；结果：无。
+**核心总结**: 问题：小模型在边缘设备上部署时面临因噪声和录制条件变化导致的领域漂移问题；方法：提出一种持续学习框架，结合双输入卷积神经网络（MFCC和梅尔频谱）；结果：无。
 
 ---
 ## 8. [All ascents exponential from valued constraint graphs of pathwidth three](http://arxiv.org/abs/2601.16156v1)
@@ -156,7 +156,7 @@
 **作者**: Denise M. Case
 **更新时间**: 2026-01-22 17:51
 **论文摘要**: Modern data systems increasingly operate under conditions of persistent legal, political, and analytic disagreement. In such settings, interoperability cannot rely on shared interpretation, negotiated semantics, or centralized authority. Instead, representations must function as neutral substrates that preserve stable reference across incompatible extensions. This paper investigates the structural constraints imposed on ontological design by this requirement. Building on a neutrality framework t
-**核心总结**: 问题：数据系统在法律、政治和分析分歧下需实现互操作性；方法：基于中立框架研究本体设计的结构约束；结果：提出保持稳定引用的中立表示方法。
+**核心总结**: 问题：数据系统在法律、政治和分析分歧下需实现互操作性；方法：基于中立框架研究本体设计的结构约束；结果：提出支持稳定引用的中立表示方法。
 
 ---
 ## 10. [Interconnection-based Model Reduction for Linear Hybrid Systems](http://arxiv.org/abs/2601.16149v1)
@@ -164,6 +164,6 @@
 **作者**: Zirui Niu, Giordano Scarciotti, Alessandro Astolfi
 **更新时间**: 2026-01-22 17:45
 **论文摘要**: In this paper, we address the model reduction problem for linear hybrid systems via the interconnection-based technique called moment matching. We consider two classical interconnections, namely the direct and swapped interconnections, in the hybrid setting, and we present families of reduced-order models for each interconnection via a hybrid characterisation of the steady-state responses. By combining the results for each interconnection, the design of a reduced-order model that achieves moment
-**核心总结**: 问题：线性混合系统的模型降阶；方法：基于关联技术的矩匹配，采用直接和交换关联；结果：提出两种关联下的降阶模型，通过稳态响应表征实现矩匹配。
+**核心总结**: 问题：线性混合系统的模型降阶；方法：基于关联技术的矩匹配，采用直接和交换关联；结果：提出两种关联下的降阶模型设计。
 
 ---
