deploy: 6d0e81e9feb72fa8adb8af8e6fd37595301bb597

--- a/digest_2026-02-08.md
+++ b/digest_2026-02-08.md
@@ -1,4 +1,4 @@
-# arXiv 论文日报 2026-02-06
+# arXiv 论文日报 2026-02-08
 > 自动抓取并筛选 | 共 20 篇论文
 ---
 # RNA_structure_prediction
@@ -9,7 +9,7 @@
 **作者**: Haoyuan Li, Qihang Cao, Tao Tang, Kun Xiang, Zihan Guo, Jianhua Han, Hang Xu, Xiaodan Liang
 **更新时间**: 2026-02-05 18:59
 **论文摘要**: Recent progress in spatial reasoning with Multimodal Large Language Models (MLLMs) increasingly leverages geometric priors from 3D encoders. However, most existing integration strategies remain passive: geometry is exposed as a global stream and fused in an indiscriminate manner, which often induces semantic-geometry misalignment and redundant signals. We propose GeoThinker, a framework that shifts the paradigm from passive fusion to active perception. Instead of feature mixing, GeoThinker enabl
-**核心总结**: 问题：现有MLLM在空间推理中几何信息融合存在语义-几何错位和冗余；方法：提出GeoThinker，通过主动感知替代被动融合；结果：提升空间推理性能。
+**核心总结**: 问题：现有MLLM在空间推理中几何信息融合效果不佳；方法：提出GeoThinker框架，采用主动感知而非被动融合；结果：提升几何与语义对齐，减少冗余信号。
 
 ---
 ## 2. [Context Forcing: Consistent Autoregressive Video Generation with Long Context](http://arxiv.org/abs/2602.06028v1)
@@ -17,7 +17,7 @@
 **作者**: Shuo Chen, Cong Wei, Sun Sun, Ping Nie, Kai Zhou, Ge Zhang, Ming-Hsuan Yang, Wenhu Chen
 **更新时间**: 2026-02-05 18:58
 **论文摘要**: Recent approaches to real-time long video generation typically employ streaming tuning strategies, attempting to train a long-context student using a short-context (memoryless) teacher. In these frameworks, the student performs long rollouts but receives supervision from a teacher limited to short 5-second windows. This structural discrepancy creates a critical \textbf{student-teacher mismatch}: the teacher's inability to access long-term history prevents it from guiding the student on global te
-**核心总结**: 问题：实时长视频生成中存在学生-教师不匹配问题；方法：使用短时教师监督长时学生；结果：教师无法提供全局指导导致性能受限。
+**核心总结**: 问题：实时长视频生成中存在学生-教师不匹配问题；方法：使用短上下文教师指导长上下文学生；结果：教师无法提供全局指导导致性能受限。
 
 ---
 ## 3. [ACT DR6+Planck impact on inflation with non-zero vacuum expectation value and the post-inflationary behavior](http://arxiv.org/abs/2602.06027v1)
@@ -25,7 +25,7 @@
 **作者**: F. B. M. dos Santos, J. G. Rodrigues, G. Rodrigues, C. Siqueira, J. S. Alcaniz
 **更新时间**: 2026-02-05 18:57
 **论文摘要**: The impact of the most recent cosmic microwave background (CMB) data from the Atacama Cosmology Telescope (ACT) is studied for a model of cosmic inflation which predicts a non-zero vacuum expectation value (VEV) $M$ for a large-field regime. Since lower values of $M$ are compatible with the higher spectral index $n_s$ provided by the ACT+Planck joint analysis, we establish new limits on this parameter while also considering further CMB data from the latest BICEP/Keck Array release for CMB polari
-**核心总结**: 问题：研究ACT最新CMB数据对大场宇宙暴胀模型中真空期望值M的影响；方法：结合ACT+Planck和BICEP/Keck Array的CMB数据进行分析；结果：得出新的M参数限制，低M值与高谱指数ns兼容。
+**核心总结**: 问题：研究ACT最新CMB数据对大场宇宙暴胀模型中真空期望值M的影响；方法：结合ACT+Planck与BICEP/Keck Array的CMB数据进行分析；结果：确定了M的新限制，低M值与高谱指数ns兼容。
 
 ---
 ## 4. [Learning Query-Aware Budget-Tier Routing for Runtime Agent Memory](http://arxiv.org/abs/2602.06025v1)
@@ -33,7 +33,7 @@
 **作者**: Haozhen Zhang, Haodong Yue, Tao Feng, Quanyu Long, Jianzhu Bao, Bowen Jin, Weizhi Zhang, Xiao Li, Jiaxuan You, Chengwei Qin, Wenya Wang
 **更新时间**: 2026-02-05 18:57
 **论文摘要**: Memory is increasingly central to Large Language Model (LLM) agents operating beyond a single context window, yet most existing systems rely on offline, query-agnostic memory construction that can be inefficient and may discard query-critical information. Although runtime memory utilization is a natural alternative, prior work often incurs substantial overhead and offers limited explicit control over the performance-cost trade-off. In this work, we present \textbf{BudgetMem}, a runtime agent mem
-**核心总结**: 问题：LLM代理在超出单个上下文窗口时面临内存效率和信息保留的挑战；方法：提出BudgetMem，一种运行时内存管理机制；结果：有效控制性能与成本的权衡，提升内存利用效率。
+**核心总结**: 问题：LLM代理在超出单个上下文窗口时面临内存效率和信息保留的挑战；方法：提出BudgetMem，一种运行时内存管理方法；结果：有效控制性能与成本的权衡，提升内存利用效率。
 
 ---
 ## 5. [Mechanisms of AI Protein Folding in ESMFold](http://arxiv.org/abs/2602.06020v1)
@@ -41,7 +41,7 @@
 **作者**: Kevin Lu, Jannik Brinkmann, Stefan Huber, Aaron Mueller, Yonatan Belinkov, David Bau, Chris Wendler
 **更新时间**: 2026-02-05 18:54
 **论文摘要**: How do protein structure prediction models fold proteins? We investigate this question by tracing how ESMFold folds a beta hairpin, a prevalent structural motif. Through counterfactual interventions on model latents, we identify two computational stages in the folding trunk. In the first stage, early blocks initialize pairwise biochemical signals: residue identities and associated biochemical features such as charge flow from sequence representations into pairwise representations. In the second 
-**核心总结**: 问题：蛋白质结构预测模型如何折叠蛋白质？；方法：通过追踪ESMFold折叠β发夹结构，进行反事实干预分析；结果：发现折叠过程包含两个计算阶段，早期块初始化成对生化信号。
+**核心总结**: 问题：蛋白质结构预测模型如何折叠蛋白质？；方法：通过追踪ESMFold折叠β发夹结构，进行反事实干预分析；结果：发现折叠过程包含两个计算阶段，早期块初始化残基对生化信号。
 
 ---
 ## 6. [Convex unions and completions from simplicial pseudomanifolds](http://arxiv.org/abs/2602.06016v1)
@@ -49,7 +49,7 @@
 **作者**: Soohyun Park
 **更新时间**: 2026-02-05 18:53
 **论文摘要**: While intersections of convex sets are convex, their unions have rather complicated behavior. Some natural contexts where they appear include duality arguments involving boundaries of convex sets and valuations, which have an Euler characteristic-like structure. However, there are certain settings where the convexity property itself is important to consider. For example, this includes (preservation of) positivity properties of divisors on toric varieties under blowdowns. In the case of (restrict
-**核心总结**: 问题：凸集的并集行为复杂，某些情况下需关注凸性；方法：研究凸集并集在对偶、指标理论及 торic 变量中的性质；结果：在特定情境下，如除子在爆破下的正性保持，凸性仍具重要性。
+**核心总结**: 问题：凸集并集的凸性行为复杂；方法：研究其在对偶性、欧拉特征结构及除子正性保持中的应用；结果：揭示特定情形下凸性仍具重要性。
 
 ---
 ## 7. [A Systematic Evaluation of Large Language Models for PTSD Severity Estimation: The Role of Contextual Knowledge and Modeling Strategies](http://arxiv.org/abs/2602.06015v1)
@@ -57,7 +57,7 @@
 **作者**: Panagiotis Kaliosis, Adithya V Ganesan, Oscar N. E. Kjell, Whitney Ringwald, Scott Feltman, Melissa A. Carr, Dimitris Samaras, Camilo Ruggero, Benjamin J. Luft, Roman Kotov, Andrew H. Schwartz
 **更新时间**: 2026-02-05 18:53
 **论文摘要**: Large language models (LLMs) are increasingly being used in a zero-shot fashion to assess mental health conditions, yet we have limited knowledge on what factors affect their accuracy. In this study, we utilize a clinical dataset of natural language narratives and self-reported PTSD severity scores from 1,437 individuals to comprehensively evaluate the performance of 11 state-of-the-art LLMs. To understand the factors affecting accuracy, we systematically varied (i) contextual knowledge like sub
-**核心总结**: 问题：评估大语言模型在零样本情况下对PTSD评估的准确性及其影响因素；方法：使用1437人的临床数据集，测试11个先进LLM的性能，并系统变化上下文知识等变量；结果：发现上下文知识显著影响模型准确性。
+**核心总结**: 问题：评估LLM在零样本情况下检测PTSD的准确性；方法：使用1,437人的自然语言叙述和自报PTSD严重程度数据，测试11个先进LLM；结果：未完成，信息不足。
 
 ---
 ## 8. [Excursion decomposition of the XOR-Ising model](http://arxiv.org/abs/2602.06011v1)
@@ -65,7 +65,7 @@
 **作者**: Tomás Alcalde López, Avelio Sepúlveda
 **更新时间**: 2026-02-05 18:51
 **论文摘要**: We study the excursion decomposition of the two-dimensional critical XOR-Ising model with either $+$ or free boundary conditions. In the first part, we construct the decomposition directly in the continuum. This construction relies on the identification of the XOR-Ising field with the cosine or sine of a Gaussian free field (GFF) $φ$ multiplied by $α= 1/\sqrt{2}$, and is obtained by an appropriate exploration of two-valued level sets of the GFF. More generally, the same construction applies to t
-**核心总结**: 问题：二维临界XOR-Ising模型的遍历分解；方法：利用高斯自由场（GFF）的余弦或正弦构造分解；结果：通过探索GFF的双值水平集实现分解。
+**核心总结**: 问题：二维临界XOR-Ising模型的遍历分解；方法：基于高斯自由场（GFF）的余弦或正弦构造分解；结果：通过探索GFF的二值水平集实现分解。
 
 ---
 ## 9. [Characterizing and Modeling the GitHub Security Advisories Review Pipeline](http://arxiv.org/abs/2602.06009v1)
@@ -73,7 +73,7 @@
 **作者**: Claudio Segal, Paulo Segal, Carlos Eduardo de Schuller Banjar, Felipe Paixão, Hudson Silva Borges, Paulo Silveira Neto, Eduardo Santana de Almeida, Joanna C. S. Santos, Anton Kocheturov, Gaurav Kumar 
 **更新时间**: 2026-02-05 18:50
 **论文摘要**: GitHub Security Advisories (GHSA) have become a central component of open-source vulnerability disclosure and are widely used by developers and security tools. A distinctive feature of GHSA is that only a fraction of advisories are reviewed by GitHub, while the mechanisms associated with this review process remain poorly understood. In this paper, we conduct a large-scale empirical study of GHSA review processes, analyzing over 288,000 advisories spanning 2019--2025. We characterize which adviso
-**核心总结**: 问题：GitHub Security Advisories（GHSA）的审核机制不明确，部分 advisories 未被审核；方法：分析2019-2025年间28.8万条 GHSA 数据，研究审核特征；结果：发现审核率低，且审核与漏洞严重性、发布者身份等因素相关。
+**核心总结**: 问题：GHSA审查机制不明确，部分漏洞公告未被审查；方法：分析2019-2025年28.8万条GHSA数据；结果：揭示审查模式及影响因素。
 
 ---
 ## 10. [AgenticPay: A Multi-Agent LLM Negotiation System for Buyer-Seller Transactions](http://arxiv.org/abs/2602.06008v1)
@@ -81,7 +81,7 @@
 **作者**: Xianyang Liu, Shangding Gu, Dawn Song
 **更新时间**: 2026-02-05 18:50
 **论文摘要**: Large language model (LLM)-based agents are increasingly expected to negotiate, coordinate, and transact autonomously, yet existing benchmarks lack principled settings for evaluating language-mediated economic interaction among multiple agents. We introduce AgenticPay, a benchmark and simulation framework for multi-agent buyer-seller negotiation driven by natural language. AgenticPay models markets in which buyers and sellers possess private constraints and product-dependent valuations, and must
-**核心总结**: 问题：缺乏评估多智能体语言经济交互的基准；方法：引入AgenticPay，模拟买家卖家自然语言谈判；结果：构建了包含私有约束和产品估值的市场模型。
+**核心总结**: 问题：缺乏评估多智能体语言经济交互的基准；方法：引入AgenticPay框架，模拟买家卖家自然语言协商；结果：支持私有约束和产品依赖估值的市场建模。
 
 ---
 # RNA_design
@@ -92,7 +92,7 @@
 **作者**: Yamit Ehrlich, Nimrod Berman, Assaf Shocher
 **更新时间**: 2026-02-05 18:59
 **论文摘要**: The Moore-Penrose Pseudo-inverse (PInv) serves as the fundamental solution for linear systems. In this paper, we propose a natural generalization of PInv to the nonlinear regime in general and to neural networks in particular. We introduce Surjective Pseudo-invertible Neural Networks (SPNN), a class of architectures explicitly designed to admit a tractable non-linear PInv. The proposed non-linear PInv and its implementation in SPNN satisfy fundamental geometric properties. One such property is n
-**核心总结**: 问题：传统伪逆方法无法处理非线性系统；方法：提出SPNN架构实现非线性伪逆；结果：满足基本几何性质。
+**核心总结**: 问题：传统伪逆方法无法处理非线性系统；方法：提出可逆神经网络SPNN以实现非线性伪逆；结果：SPNN满足基本几何性质，支持非线性系统求解。
 
 ---
 ## 2. [SwimBird: Eliciting Switchable Reasoning Mode in Hybrid Autoregressive MLLMs](http://arxiv.org/abs/2602.06040v1)
@@ -100,7 +100,7 @@
 **作者**: Jintao Tong, Shilin Yan, Hongwei Xue, Xiaojun Tang, Kunyu Shi, Guannan Zhang, Ruixuan Li, Yixiong Zou
 **更新时间**: 2026-02-05 18:59
 **论文摘要**: Multimodal Large Language Models (MLLMs) have made remarkable progress in multimodal perception and reasoning by bridging vision and language. However, most existing MLLMs perform reasoning primarily with textual CoT, which limits their effectiveness on vision-intensive tasks. Recent approaches inject a fixed number of continuous hidden states as "visual thoughts" into the reasoning process and improve visual performance, but often at the cost of degraded text-based logical reasoning. We argue t
-**核心总结**: 问题：现有多模态大语言模型在视觉密集型任务中表现受限，依赖文本思维链导致视觉推理效果不足；方法：引入固定数量的连续隐藏状态作为“视觉思维”提升视觉性能；结果：无。
+**核心总结**: 问题：现有多模态大语言模型在视觉密集型任务中效果受限，且文本逻辑推理能力下降；方法：引入可学习的视觉提示以增强视觉推理，同时保持文本推理能力；结果：提升视觉任务性能，文本推理无明显退化。
 
 ---
 ## 3. [CommCP: Efficient Multi-Agent Coordination via LLM-Based Communication with Conformal Prediction](http://arxiv.org/abs/2602.06038v1)
@@ -108,7 +108,7 @@
 **作者**: Xiaopan Zhang, Zejin Wang, Zhixu Li, Jianpeng Yao, Jiachen Li
 **更新时间**: 2026-02-05 18:59
 **论文摘要**: To complete assignments provided by humans in natural language, robots must interpret commands, generate and answer relevant questions for scene understanding, and manipulate target objects. Real-world deployments often require multiple heterogeneous robots with different manipulation capabilities to handle different assignments cooperatively. Beyond the need for specialized manipulation skills, effective information gathering is important in completing these assignments. To address this compone
-**核心总结**: 问题：多机器人协作完成人类自然语言指令的任务；方法：结合指令理解、场景问答和目标物体操作；结果：无。
+**核心总结**: 问题：多机器人协作完成自然语言指令的场景理解与操作任务；方法：结合命令解析、问题生成与回答及多机器人协作策略；结果：提升任务执行效率与场景理解能力。
 
 ---
 ## 4. [Curiosity is Knowledge: Self-Consistent Learning and No-Regret Optimization with Active Inference](http://arxiv.org/abs/2602.06029v1)
@@ -116,7 +116,7 @@
 **作者**: Yingke Li, Anjali Parashar, Enlu Zhou, Chuchu Fan
 **更新时间**: 2026-02-05 18:58
 **论文摘要**: Active inference (AIF) unifies exploration and exploitation by minimizing the Expected Free Energy (EFE), balancing epistemic value (information gain) and pragmatic value (task performance) through a curiosity coefficient. Yet it has been unclear when this balance yields both coherent learning and efficient decision-making: insufficient curiosity can drive myopic exploitation and prevent uncertainty resolution, while excessive curiosity can induce unnecessary exploration and regret. We establish
-**核心总结**: 问题：如何平衡主动推理中的好奇心以实现有效学习与决策；方法：通过调整好奇系数优化信息获取与任务表现的权衡；结果：无。
+**核心总结**: 问题：如何平衡主动推理中的探索与利用以实现有效学习和决策；方法：通过调整好奇心系数优化预期自由能最小化过程；结果：无。
 
 ---
 ## 5. [Modeling integrated frequency shifters and beam splitters](http://arxiv.org/abs/2602.06003v1)
@@ -124,7 +124,7 @@
 **作者**: Manuel H. Muñoz-Arias, Kevin J. Randles, Nils T. Otterstrom, Paul S. Davids, Michael Gehl, Mohan Sarovar
 **更新时间**: 2026-02-05 18:48
 **论文摘要**: Photonic quantum computing is a strong contender in the race to fault-tolerance. Recent proposals using qubits encoded in frequency modes promise a large reduction in hardware footprint, and have garnered much attention. In this encoding, linear optics, i.e., beam splitters and phase shifters, is necessarily not energy-conserving, and is costly to implement. In this work, we present designs of frequency-mode beam splitters based on modulated arrays of coupled resonators. We develop a methodology
-**核心总结**: 问题：频率模式光子量子计算中线性光学器件能耗高、成本高；方法：设计基于调制耦合谐振器阵列的频率模式分束器；结果：提出一种新型实现方法。
+**核心总结**: 问题：频率模式编码的光子量子计算中，线性光学器件能耗高且成本高；方法：提出基于调制耦合谐振器阵列的频率模式分束器设计；结果：无。
 
 ---
 ## 6. [Speech Emotion Recognition Leveraging OpenAI's Whisper Representations and Attentive Pooling Methods](http://arxiv.org/abs/2602.06000v1)
@@ -132,7 +132,7 @@
 **作者**: Ali Shendabadi, Parnia Izadirad, Mostafa Salehi, Mahmoud Bijankhan
 **更新时间**: 2026-02-05 18:46
 **论文摘要**: Speech Emotion Recognition (SER) research has faced limitations due to the lack of standard and sufficiently large datasets. Recent studies have leveraged pre-trained models to extract features for downstream tasks such as SER. This work explores the capabilities of Whisper, a pre-trained ASR system, in speech emotion recognition by proposing two attention-based pooling methods, Multi-head Attentive Average Pooling and QKV Pooling, designed to efficiently reduce the dimensionality of Whisper rep
-**核心总结**: 问题：Speech Emotion Recognition 数据集不足，传统方法效果有限；方法：提出两种基于注意力的池化方法，利用 Whisper 提取特征；结果：有效降低维度并提升 SER 性能。
+**核心总结**: 问题：Speech Emotion Recognition 数据集不足，预训练模型应用有限；方法：提出两种基于注意力的池化方法，用于降低Whisper特征维度；结果：未明确说明。
 
 ---
 ## 7. [VisRefiner: Learning from Visual Differences for Screenshot-to-Code Generation](http://arxiv.org/abs/2602.05998v1)
@@ -140,7 +140,7 @@
 **作者**: Jie Deng, Kaichun Yao, Libo Zhang
 **更新时间**: 2026-02-05 18:45
 **论文摘要**: Screenshot-to-code generation aims to translate user interface screenshots into executable frontend code that faithfully reproduces the target layout and style. Existing multimodal large language models perform this mapping directly from screenshots but are trained without observing the visual outcomes of their generated code. In contrast, human developers iteratively render their implementation, compare it with the design, and learn how visual differences relate to code changes. Inspired by thi
-**核心总结**: 问题：从截图生成代码的准确性不足；方法：借鉴人类开发者通过渲染和对比迭代优化代码的过程；结果：无。
+**核心总结**: 问题：从截图生成代码的准确性与视觉效果一致性不足；方法：借鉴人类开发者的迭代渲染与对比学习机制；结果：无。
 
 ---
 ## 8. [Causal Inference on Stopped Random Walks in Online Advertising](http://arxiv.org/abs/2602.05997v1)
@@ -148,7 +148,7 @@
 **作者**: Jia Yuan Yu
 **更新时间**: 2026-02-05 18:43
 **论文摘要**: We consider a causal inference problem frequently encountered in online advertising systems, where a publisher (e.g., Instagram, TikTok) interacts repeatedly with human users and advertisers by sporadically displaying to each user an advertisement selected through an auction. Each treatment corresponds to a parameter value of the advertising mechanism (e.g., auction reserve-price), and we want to estimate through experiments the corresponding long-term treatment effect (e.g., annual advertising 
-**核心总结**: 问题：在线广告系统中，估计广告机制参数的长期处理效应；方法：通过实验设计和因果推断方法分析广告展示策略的影响；结果：提出一种有效评估广告机制长期效果的框架。
+**核心总结**: 问题：在线广告系统中，评估广告机制参数的长期影响；方法：通过实验估计广告机制参数（如拍卖底价）的长期处理效应；结果：无。
 
 ---
 ## 9. [Orthogonal Self-Attention](http://arxiv.org/abs/2602.05996v1)
@@ -156,7 +156,7 @@
 **作者**: Leo Zhang, James Martens
 **更新时间**: 2026-02-05 18:42
 **论文摘要**: Softmax Self-Attention (SSA) is a key component of Transformer architectures. However, when utilised within skipless architectures, which aim to improve representation learning, recent work has highlighted the inherent instability of SSA due to inducing rank collapse and poorly-conditioned Jacobians. In this work, we design a novel attention mechanism: Orthogonal Self-Attention (OSA), which aims to bypass these issues with SSA, in order to allow for (non-causal) Transformers without skip connect
-**核心总结**: 问题：Transformer中Softmax Self-Attention在无跳跃连接架构中存在稳定性问题；方法：设计Orthogonal Self-Attention机制；结果：解决Rank Collapse和Jacobian条件差问题。
+**核心总结**: 问题：Transformer中Softmax Self-Attention在无跳跃连接架构中存在不稳定问题；方法：提出正交自注意力机制（OSA）；结果：解决rank collapse和Jacobian条件差问题，支持非因果Transformer。
 
 ---
 ## 10. [Diamond Maps: Efficient Reward Alignment via Stochastic Flow Maps](http://arxiv.org/abs/2602.05993v1)
@@ -164,6 +164,6 @@
 **作者**: Peter Holderrieth, Douglas Chen, Luca Eyring, Ishin Shah, Giri Anantharaman, Yutong He, Zeynep Akata, Tommi Jaakkola, Nicholas Matthew Boffi, Max Simchowitz
 **更新时间**: 2026-02-05 18:42
 **论文摘要**: Flow and diffusion models produce high-quality samples, but adapting them to user preferences or constraints post-training remains costly and brittle, a challenge commonly called reward alignment. We argue that efficient reward alignment should be a property of the generative model itself, not an afterthought, and redesign the model for adaptability. We propose "Diamond Maps", stochastic flow map models that enable efficient and accurate alignment to arbitrary rewards at inference time. Diamond 
-**核心总结**: 问题：生成模型在训练后难以高效适应用户偏好或约束；方法：提出Diamond Maps，一种可高效对齐任意奖励的随机流映射模型；结果：实现推理时的高效准确奖励对齐。
+**核心总结**: 问题：生成模型在训练后难以高效适应用户偏好或约束；方法：提出“Diamond Maps”流映射模型，实现推理时的高效奖励对齐；结果：提升生成模型的可适应性与准确性。
 
 ---
